Move auth sections into double columns

--- a/fs-match.css
+++ b/fs-match.css
@@ -1,3 +1,15 @@
+#auth {
+  margin-top: 30px;
+}
+
+#auth h2 {
+  margin-top: 0;
+}
+
+#auth .alert {
+  margin-bottom: 0;
+}
+
 #wtWatchlistReady, 
 #wtSignedIn,
 #fsSignedIn {
