--- a/fs-match.css
+++ b/fs-match.css
@@ -26,19 +26,24 @@
   margin-top: 0;
 }
 
+.watchlist-entry .panel-title {
+  font-size: 20px;
+}
+
 .no-existing-matches-message,
 .no-fs-matches-message {
   display: none;
 }
 
-.potential-match {
-  border-top: 1px solid #ccc;
-  padding: 10px 5px;
-  overflow-y: auto;
-  overflow-x: hidden;
+.match {
+  padding: 10px;
 }
 
-.potential-match:nth-child(odd){
+.match:not(:first-child){
+  border-top: 1px solid #ccc;
+}
+
+.match:nth-child(odd){
   background-color: #f5f5f5;
 }
 
