Add FS Certified logo

--- a/fs-match.css
+++ b/fs-match.css
@@ -66,3 +66,13 @@
 .wt-pagination .next {
   float: right;
 }
+
+#footer {
+  margin: 20px 0;
+  overflow: auto;
+  text-align: center;
+}
+
+#footer .certified {
+  height: 50px;
+}
